tests/e2e/not_allowed/auto.error
Error: syntax error in story at line 1, column 1

1|    auto = 1
      ^^^^

E0030: `auto` is reserved for future use
